# Representation-Aware-MPPI

./: .gitignore  CLAUDE.md  JOURNAL.md  README.md  RESULTS.md  STATE.md  TODO.md
data_pipeline/: README.md  __init__.py  collect_scripted.py  replay_buffer.py  synthetic_plant.py
docs/: README.md  agents.md  aleatoric_channel_bev_rendering.md  aleatoric_risk_cost_critic_interface.md  automation.md  cbfkit_analysis.md  cfm_mppi_analysis.md  decisions.md  deliberations.md  dynamic_obstacles_uncertainty_track.md  energy_regularization_analysis.md  ensemble_residual_dynamics_analysis.md  environment_taxonomy.md  epistemic_channel_bev_rendering.md  jackal_cafe.md  journal_state.md  maml_residual_adaptation_analysis.md  margin_inflation_cost_critic_interface.md  mppi_sandbox.md  multi_channel_risk_bev_stack.md  pedestrians.md  (+20 more)
src/representation_aware_mppi_bringup/: package.xml  setup.cfg  setup.py
src/representation_aware_mppi_bringup/config/: nav2_jackal_params.yaml  nav2_mppi_params.yaml  nav2_outdoor_params.yaml
src/representation_aware_mppi_bringup/configs/: extra_sensors_bridge.yaml  jackal_outdoor_bridge.yaml  scout_outdoor_bridge.yaml
src/representation_aware_mppi_bringup/launch/: jackal_cafe.launch.py  jackal_outdoor_sim.launch.py  outdoor_sim.launch.py  tb3_mppi_sim.launch.py  tb3_mppi_sim_pedestrians.launch.py
src/representation_aware_mppi_bringup/urdf/: gz_waffle_outdoor.sdf.xacro  jackal_outdoor.sdf.xacro  scout_outdoor.sdf.xacro
src/representation_aware_mppi_bringup/worlds/: cafe3_jazzy.sdf.xacro  small_city.sdf.xacro  tb3_sandbox_pedestrians.sdf.xacro
(+226 files in other folders)
